plugins/kotlin/idea/tests/testData/highlighter/DelegateFunctionMissing.kt
// IGNORE_K2
class <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">X</symbolName><<symbolName descr="null" textAttributesKey="KOTLIN_TYPE_PARAMETER">T</symbolName>>{}
fun <<symbolName descr="null" textAttributesKey="KOTLIN_TYPE_PARAMETER">T</symbolName>> <symbolName descr="null" textAttributesKey="KOTLIN_FUNCTION_DECLARATION">foo</symbolName>() : <symbolName descr="null" textAttributesKey="KOTLIN_CLASS">X</symbolName><<symbolName descr="null" textAttributesKey="KOTLIN_TYPE_PARAMETER">T</symbolName>> {<error descr="[NO_RETURN_IN_FUNCTION_WITH_BLOCK_BODY]" textAttributesKey="ERRORS_ATTRIBUTES">}</error>
val <symbolName descr="null" textAttributesKey="KOTLIN_PACKAGE_PROPERTY">x</symbolName> <symbolName descr="null" textAttributesKey="KOTLIN_KEYWORD">by</symbolName> <error descr="[DELEGATE_SPECIAL_FUNCTION_MISSING]" textAttributesKey="ERRORS_ATTRIBUTES"><symbolName descr="null" textAttributesKey="KOTLIN_PACKAGE_FUNCTION_CALL">foo</symbolName><<error descr="Type expected" textAttributesKey="ERRORS_ATTRIBUTES">></error>()</error>